--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,9 @@ dependencies:
   google_sign_in: ^6.0.2
   cloud_firestore: ^4.4.5
   flutter_local_notifications: ^13.0.0
+  firebase_messaging: ^14.3.0
+  firebase_storage: ^11.1.1
+  image_picker:
 
 dev_dependencies:
   flutter_test:
